# gsda

./: .RData  .Rhistory  .gitignore  Makefile  README.md  circular_mapper.py  clusters.tsv  extract_subsets.py
gseda/: .dockerignore  CLAUDE.md  Dockerfile  FEATURE_TESTING_GUIDE.md  pred_baseq_and_emperical_baseq.py  preq-baseq-and-emp-q.py  pyproject.toml  query_error_locus_ana.py  ref_locus_ana.py  sequence-report-fact-analysis.ipynb  utils.py
gseda/.claude/skills/gemma-code/: SKILL.md
gseda/src/gseda/16s/: align_mismatch_dist_and_q_dist.py  align_mismatch_reads.py  dada2_fail_analysis.py  minimap2_align.py
gseda/src/gseda/ab_analysis/: ab_concordance.py
gseda/src/gseda/align_ana/: align_mismatch_dist.py  cigar_surgery.py  mapppy_align.py  mapppy_align_seq.py  mapppy_align_seq_tr_check.py  mapppy_align_seq_with_gap_left_align.py  mappy_ext.py  seq_irc_check.py
gseda/src/gseda/aligned_bam_ana/: low_window_identity.py
gseda/src/gseda/bam_ana/: bam_basic_stat.py  bam_subset_query_len_dist.py  pass_through_channel_q_dist.py
gseda/src/gseda/bam_filter/: bam2fx.py  dump_bam_through_length.py  dump_sbr_according_to_smc_taget_coverage.py  dump_sbr_and_smc_according_barcode.py  dump_sbr_or_smc_according_barcode.py  dump_smc_sub_bam_through_channels.py  dump_smc_sub_bam_through_qnames.py
gseda/src/gseda/bam_surgery/: generate_smicing_speed_benchmark_sbrbam.py  gs_sbr_2_pb_sbr.py  gs_sbr_2_pb_sbr_batch.sh  split_even_odd_subreads.py
gseda/src/gseda/fact_table_ana/: ana_poly.py  pred_baseq_and_emp_q.py  preq-baseq-and-emp-q.py
gseda/src/gseda/hypothesis_testing/: beta_binomial.py  binomial_testing.py  fisher_exact_testing.py  permutation_testing.py
gseda/src/gseda/plotter/: q_dist_plot.py
gseda/src/gseda/ppl/: ByStrandTrueAna.py  asts_analysis.py  channel_subreads_ref_analysis.post-ana.md  channel_subreads_ref_analysis.post.py  channel_subreads_ref_analysis.postLowerMinusCur.py  channel_subreads_ref_analysis.py  channel_subreads_ref_analysis2.py  channel_subreads_ref_analysis3.py  demo_plot.py  demuxed_stat.py  dna_strand_inconsistency_analysis.py  fastq_quality_filter.py  fastq_quality_stats.py  funnel.sh  homo_and_str_region_coverage.py  inverted_repeat_ratio.py  locus_q_distribution.py  low_high_q_quality_stats.py  low_q_analysis.py  macebell_ratio.py  merge_demuxed.py  minimap2_align_and_index.py  motif_context_base.py  polish_error_locus_analysis_ppl.py  q30_base_ratio_in_q30_channel.py  reads_quality_stats.py  reads_quality_stats_README.md  reads_quality_stats_hp.py  reads_quality_stats_hp_tr.py  reads_quality_stats_v2.py  reads_quality_stats_v3.py  (+14 more)
gseda/tests/: test_api_routers.py  test_by_strand_ana.py
gsetl/: Cargo.toml  README.md
gsetl/src/: aligned_bam_etl.rs  cli.rs  main.rs  poly_n.rs  utils.rs
gsetl/src/aligned_bam_etl/: fact_bam_basic.rs  fact_baseq_stat.rs  fact_error_locus_info.rs  fact_error_query_locus_info.rs  fact_poly_info.rs  fact_record_stat.rs  fact_ref_locus_info.rs
gsetl/src/non_aligned_bam_etl/: fact_bam_basic.rs  mod.rs  seq_n_stats.rs
(+78 files in other folders)
