[package]
name = "gsetl"
version = "0.10.0"
edition = "2021"
description = "etl"
license = "MIT"
repository ="https://github.com/keithyin/gsda"

[dependencies]
clap = {version="4.4", features=["derive"]}
rust-htslib = "0.49.0"
#tracing = "0.1.40"
#tracing-subscriber = {version="0.3.18", features=["json", "env-filter", "fmt", "time", "local-time"]}
#time = "0.3.34"
#glob = "0.3.1"
anyhow = "1.0.82"
#lazy_static = "1.4.0"
#rayon="1.8.1"
#indicatif= {version="0.17.7"}
#bio="1.6.0"
#uuid = { version = "1.0", features = ["v5"] }
#minimap2="0.1.20+minimap2.2.28"
#num_cpus="1.16"
crossbeam = "0.8"
gskits="0.14.6"
indicatif="0.17.7"
polars = {version="0.46", features=["lazy"]}
rand = "0.9.0"
num_cpus = "1.16"
ndarray = "0.16"
# plotters = "0.3" 